--- a/hackathon-guides/build-modern-ai-apps/challenge-solutions/challenge-06/code/VectorSearchAiAssistant/VectorSearchAiAssistant.SemanticKernel/VectorSearchAiAssistant.SemanticKernel.csproj
+++ b/hackathon-guides/build-modern-ai-apps/challenge-solutions/challenge-06/code/VectorSearchAiAssistant/VectorSearchAiAssistant.SemanticKernel/VectorSearchAiAssistant.SemanticKernel.csproj
@@ -8,7 +8,7 @@
 	<ItemGroup>
 	<PackageReference Include="Azure.Search.Documents" Version="11.5.0-beta.5" />
     <PackageReference Include="Microsoft.ML.Tokenizers" Version="0.21.0-preview.23511.1" />
-    <PackageReference Include="Microsoft.SemanticKernel" Version="1.0.0-beta4" />
+    <PackageReference Include="Microsoft.SemanticKernel" Version="1.3.0" />
     <PackageReference Include="Azure.Storage.Blobs" Version="12.16.0" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="7.0.1" />
     <PackageReference Include="Microsoft.SemanticKernel.Connectors.Memory.AzureCognitiveSearch" Version="1.0.0-beta4" />
